samples/_failures_safe/1761511248_89b664_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3abf321.c: In function ‘main’:
./samples/SAFE/__tmp_f3abf321.c:155:21: error: expected declaration or statement at end of input
  155 |                     printf("Error: Matrices must have same dimensions for addition.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_f3abf321.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f3abf321.c:155:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f3abf321.c:155:21: error: expected declaration or statement at end of input
